--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
